fix text alignments

--- a/apps/layout/_card.scss
+++ b/apps/layout/_card.scss
@@ -114,6 +114,9 @@
     }
 
     &__info {
+      p {
+        text-align: left;
+      }
       position: relative;
       height: 75%;
 
